--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.7.2",
     "@types/sql.js": "^1.4.9",
     "@webgpu/types": "^0.1.64",
     "gpt4all": "^4.0.0",
+    "onnxruntime-web": "^1.22.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "sql.js": "^1.13.0",
