--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@huggingface/transformers": "^3.7.2",
+    "@mlc-ai/web-llm": "^0.2.79",
     "@types/sql.js": "^1.4.9",
     "@webgpu/types": "^0.1.64",
     "gpt4all": "^4.0.0",
